UI: Fix incorrect overflows on panels (bsc#991602)

--- a/hawk/app/assets/stylesheets/application/_content.scss
+++ b/hawk/app/assets/stylesheets/application/_content.scss
@@ -100,14 +100,6 @@
   }
 }
 
-.panel-collapse {
-    overflow: auto;
-}
-
-.panel-body {
-    overflow: auto;
-}
-
 #rightbar {
   background-color: #EBEBEB;
 
